--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,15 +16,15 @@ h1, h2 {
 }
 
 h1 {
-  @apply font-sans-bold font-bold text-lg md:text-xl lg:text-3xl leading-[1.15] max-w-3xl mb-15 lg:mb-30
+  @apply font-sans-bold font-bold text-xl md:text-2xl lg:text-4xl leading-[1.15] max-w-3xl mb-15 lg:mb-30
 }
 
 h2 {
-  @apply text-md md:text-lg lg:text-xl leading-[1.15] mb-10 lg:mb-15 max-w-3xl
+  @apply text-md md:text-xl lg:text-2xl leading-[1.15] mb-10 lg:mb-15 max-w-3xl
 }
 
 h3 {
-  @apply uppercase font-sans-bold font-bold text-abyss tracking-wide mb-5 lg:mb-10
+  @apply uppercase font-sans-bold font-bold text-base md:text-md lg:text-lg text-abyss tracking-wide mb-5 lg:mb-10
 }
 
 strong {
@@ -33,7 +33,7 @@ strong {
 
 .imprint h2,
 .privacy h2 {
-  @apply text-base lg:text-lg
+  @apply text-base lg:text-xl
 }
 
 .privacy p {
@@ -61,7 +61,7 @@ strong {
 }
 
 main ul {
-  @apply m-0 p-0 mb-16 lg:mb-20;
+  @apply m-0 p-0 mb-16 lg:mb-20 list-none space-y-2 pl-0;
 }
 
 main ul:last-child {
@@ -69,7 +69,7 @@ main ul:last-child {
 }
 
 main ul li {
-  @apply list-item list-disc ml-20;
+  @apply relative pl-20 before:content-['–'] before:absolute before:font-sans-bold before:font-bold before:left-0 before:top-0 before:text-inherit;
 }
 
 sub,
